@@ -1,3 +1,9 @@
+2017-10-12 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	retain/autorelease queryLocator so that it remains usable in the next cycle.
+	Retain/Release the result record to make it survive the describe cycle.
+
 2017-10-11 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m (_queryMore)
